# geospatial-data

./: .gitignore  README.md  pyproject.toml
assets/20210425_100412_ssc3_u0001/: manifest.json
assets/20210425_100412_ssc3_u0001/files/SkySatCollect/20210425_100412_ssc3_u0001/: 20210425_100412_ssc3_u0001_metadata.json
assets/20210425_100412_ssc3_u0002/: manifest.json
assets/20210425_100412_ssc3_u0002/metadata/: 20210425_100412_ssc3_u0002_metadata.json
assets/20210528_131522_ssc9_u0001/: manifest.json
assets/20210528_131522_ssc9_u0001/files/SkySatCollect/20210528_131522_ssc9_u0001/: 20210528_131522_ssc9_u0001_metadata.json
assets/20210710_133141_ssc8_u0001/: manifest.json
assets/20210922_100732_ssc12_u0001/: manifest.json
assets/20210922_100732_ssc12_u0002/: manifest.json
catalog/: catalog.json
catalog/20210425_100412_ssc3_u0001/: 20210425_100412_ssc3_u0001.json
catalog/20210425_100412_ssc3_u0002/: 20210425_100412_ssc3_u0002.json
catalog/20210528_131522_ssc9_u0001/: 20210528_131522_ssc9_u0001.json
catalog/20210710_133141_ssc8_u0001/: 20210710_133141_ssc8_u0001.json
catalog/20210922_100732_ssc12_u0001/: 20210922_100732_ssc12_u0001.json
catalog/20210922_100732_ssc12_u0002/: 20210922_100732_ssc12_u0002.json
src/ml_notebooks/: helpers.py  main.py
src/ml_notebooks/cog/: cog_visualizations.ipynb
src/ml_notebooks/conda/: helper.py  median_mosaic.ipynb
src/ml_notebooks/stac/: coiled_client.ipynb  create_stac_registry.ipynb  explore_data.ipynb  mosaic.ipynb  read_stac_api.ipynb  stac.ipynb
tests/: test_ml_notebooks.py
(+3 files in other folders)
