[tool.poetry]
name = "ml-notebooks"
version = "0.1.0"
description = ""
authors = ["Alex Berndt <berndtae@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pystac = "^1.2.0"
jupyterlab = "^3.2.4"
rasterio = "^1.2.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
