[tool.poetry]
name = "ml-notebooks"
version = "0.1.0"
description = ""
authors = ["Alex Berndt <berndtae@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.10.0"
pystac = "^1.2.0"
jupyterlab = "^3.2.4"
rasterio = "^1.2.10"
stackstac = "^0.2.2"
pystac-client = "^0.3.1"
planetary-computer = "^0.4.4"
xarray-spatial = "^0.3.0"
dask-gateway = "^0.9.0"
Shapely = "^1.8.0"
coiled = "^0.0.58"
matplotlib = "^3.5.1"
distributed = "^2021.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
